# mysql

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL-SOURCE  INSTALL-WIN-SOURCE  Makefile.am  Makefile.in  README.google  aclocal.m4  configure  configure.in  google-perftools  lzo  ncurses
Docs/: INFO_SRC  INSTALL-BINARY  Makefile.in
client/: Makefile.am  Makefile.in  client_priv.h  mysql.cc  mysql_upgrade.c  mysqladmin.cc  mysqlbinlog.cc  mysqlcheck.c  mysqldump.c  mysqlimport.c  mysqlshow.c  mysqlslap.c  mysqltest.cc
cmake/: ctest.cmake
cmd-line-utils/: Makefile.in
dbug/: Makefile.in  dbug.c
extra/: CMakeLists.txt  Makefile.am  Makefile.in  innochecksum.c  innochecksum.cc
google/: clean  compile  compile.inc  deb  env.inc  httpd-stress  instance  instance.inc  mysql.control  tests
include/: Makefile.am  Makefile.in  config.h  maria.h  my_base.h  my_compare.h  my_dbug.h  my_getopt.h  my_handler_errors.h  my_list.h  my_sys.h  myisam.h  myisamchk.h  mysql.h  mysql.h.pp  mysql_com.h  mysys_err.h  violite.h
libmysql/: Makefile.am  Makefile.in  Makefile.shared  libmysql.c
libmysql_r/: Makefile.am  Makefile.in
libmysqld/: CMakeLists.txt  Makefile.am  Makefile.in  lib_sql.cc
man/: Makefile.in  comp_err.1  innochecksum.1  make_win_bin_dist.1  msql2mysql.1  my_print_defaults.1  myisam_ftdump.1  myisamchk.1  myisamlog.1  myisampack.1  mysql-stress-test.pl.1  mysql-test-run.pl.1  mysql.1  mysql.server.1  mysql_client_test.1  mysql_config.1  mysql_convert_table_format.1  mysql_find_rows.1  mysql_fix_extensions.1  mysql_fix_privilege_tables.1  mysql_install_db.1  mysql_secure_installation.1  mysql_setpermission.1  mysql_tzinfo_to_sql.1  mysql_upgrade.1  mysql_waitpid.1  mysql_zap.1  mysqlaccess.1  mysqladmin.1  mysqlbinlog.1  mysqlbug.1  mysqlcheck.1  mysqld.8  mysqld_multi.1  mysqld_safe.1  mysqldump.1  mysqldumpslow.1  mysqlhotcopy.1  mysqlimport.1  mysqlmanager.8  (+28 more)
mysql-test/: Makefile.in  disabled.def  mysql-test-run.pl  valgrind.supp
mysys/: CMakeLists.txt  Makefile.am  Makefile.in  checksum.c  checksum_io.c  default.c  errors.c  list.c  ma_dyncol.c  mf_cache.c  mf_iocache.c  mf_iocache2.c  my_copy.c  my_default.c  my_getopt.c  my_getwd.c  my_handler_errors.h  my_memmem.c  my_pread.c  my_redel.c  my_seek.c  my_thr_init.c  my_winfile.c  my_write.c  mysys_priv.h  queues.c  thr_alarm.c  thr_mutex.c
storage/googlestats/: CMakeLists.txt  Makefile.am  googlestats_ext.h  googlestats_priv.h  gss_aux.cc  gss_aux.h  gss_cache.cc  gss_cache.h  gss_errors.h  ha_googlestats.cc  ha_googlestats.h  plug.in  status_vars.h
(+1391 files in other folders)
